    * 0165 ups checks now supports also GE devices (Thanks to Andy Taylor)...
    * 0928 runas: new plugin script to include and execute mrpe, local and plugin scripts as different user...
    * 0929 windows agent: now able to include and execute additional local and plugin scripts as different user...
    * 0777 FIX: special agent emcvnx: did not work with security file authentication...
    * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
    * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
    * 0787 FIX: df: fixed problems on some filesystem checks when legacy check parameters where used...
    * 0803 FIX: agent_ibmsvc: raw data for System Info Check and License Check now in correct format...
    * 0788 FIX: oracle_tablespaces: now able to bear None values as warn/crit levels...
    * 0789 FIX: oracle_tablespaces: fixed bug when using dynamic filesystem levels...
    * 0603 FIX: cmciii checks: more general scan function plus perf-o-meters for humidity and temperature checks
    * 0604 FIX: windows_updates: now handles situations with forced reboot and no limits correctly
    * 0605 FIX: enterasys_cpu_util enterasys_lsnat: syntax fixes
    * 0889 FIX: logwatch: fix case where rule wouldn't be applied...
    * 0882 FIX: check_bi_local.py: fix crash in case of non-ascii characters...
    * 0606 FIX: apache_status: now also sends an accept header to make it work with mod_security enables servers
    * 0832 FIX: solaris_mem: fixed invalid calculation of total swap...
    * 0810 FIX: fritz.link: Not inventorizing "unconfigured" interfaces anymore
    * 0154 FIX: zfsget: Fixed inventory of filesystems
    * 0155 FIX: mssql_counters: harded check agains odd agent output
    * 0907 FIX: windows agent: register_service: fixed ImagePath registry entry...
    * 0608 FIX: oracle_asm_diskgroup: check now also handles older oracle version 11.1.0
    * 0157 FIX: apc_symmetra_test: Fixed case of unkown last test date