@@ -68,6 +68,7 @@
     * 0165 ups checks now supports also GE devices (Thanks to Andy Taylor)...
     * 0928 runas: new plugin script to include and execute mrpe, local and plugin scripts as different user...
     * 0929 windows agent: now able to include and execute additional local and plugin scripts as different user...
+    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
     * 0777 FIX: special agent emcvnx: did not work with security file authentication...
     * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
     * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
